# android-cimg

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aplha/f/image/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
image_native/: CMakeLists.txt  build.gradle
image_native/src/main/: AndroidManifest.xml
image_native/src/main/cpp/: com_alpha_f_image_CImage.h  image-c.cpp
image_native/src/main/java/com/alpha/f/image/: CImage.java
shared_libs/png/include/: pngstruct.h
